# polyglot-bazel

./: .gitignore  README.md  WORKSPACE  install_go_deps.sh
api/: BUILD.bazel  model.proto  service.proto
examples/go/: BUILD.bazel  go.mod
examples/go/pkg/client/: BUILD.bazel  audit_client.go  event_client.go
examples/go/pkg/model/: BUILD.bazel  client_model.go  model.go  service_model.go
examples/go/pkg/server/: BUILD.bazel  server.go
examples/go/pkg/service/: BUILD.bazel  audit_service.go  bq_delegate.go  event_service.go
examples/go/test/: BUILD.bazel  client_server_test.go  test_setup.go
examples/java/: BUILD.bazel
examples/java/src/main/java/: BUILD.bazel
examples/java/src/main/java/example/client/: EventClient.java
examples/java/src/main/java/example/service/: AuditService.java
scripts/bigquery/: README.md  main.tf  terraform.tfvars  variable.tf
scripts/bigquery/dataset/: dataset.tf  output.tf  variable.tf
scripts/bigquery/table/: table.tf  variable.tf
src/go/: BUILD.bazel
src/go/pkg/client/: audit_client.go
src/go/pkg/service/: BUILD.bazel  audit_service.go
src/java/: BUILD.bazel
src/java/src/main/java/: BUILD.bazel
