# gazelle:ignore

# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Load the rules appropriate for the build file
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:build/go_deps.bzl", "COMMON_API_PROTOS")

# Create the Protocol Buffer Library for the Model (Nouns)
proto_library(
    name = "model",
    srcs = [
        "model.proto",
    ],
    deps = COMMON_API_PROTOS,
    visibility = [
        "//api:__subpackages__",
        "//examples:__subpackages__",
    ],
)

# Create the Protocol Buffer Library for the Services (Verbs)
proto_library(
    name = "service",
    srcs = [
        "service.proto",
    ],
    deps = [":model"] + COMMON_API_PROTOS,
    visibility = [
        "//api:__subpackages__",
        "//examples:__subpackages__",
    ],
)
