load("@io_bazel_rules_go//proto:def.bzl", "go_grpc_library", "go_proto_library")
load("//:build/go_deps.bzl", "COMMON_API_PROTOS", "WELL_KNOWN_TYPES")

"""
Targets for creating the Go implementation of the Model and gRPC libraries
"""
go_proto_library(
    name = "go_api",
    importpath = "example/pb",
    proto = "//api:model",
    visibility = [
        "//examples/go:__subpackages__",
    ],
)

go_grpc_library(
    name = "go_grpc",
    importpath = "example/grpc",
    protos = [
        "//api:service",
    ],
    deps = [
        ":go_api",
        "@go_googleapis//google/api:annotations_go_proto",
    ] + WELL_KNOWN_TYPES,
    visibility = [
        "//examples/go:__subpackages__",
    ],
)
