load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "client",
    srcs = [
        "audit_client.go",
    ],
    importpath = "examples/go/pkg/client",
    visibility = [
        "//examples/go:__subpackages__",
    ],
    deps = [
        "//examples/go:go_api",
        "//examples/go:go_grpc",
        "//examples/go/pkg/model",
        "@com_github_cenkalti_backoff_v4//:go_default_library",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_time//rate:go_default_library",
    ],
)
