load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "model",
    srcs = [
        "model.go",
    ],
    importpath = "examples/go/pkg/model",
    visibility = [
        "//examples/go:__subpackages__",
    ],
    deps = [
        "//examples/go:go_api",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
