load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "server.go",
    ],
    importpath = "examples/go/pkg/server",
    visibility = [
        "//examples/go:__subpackages__",
    ],
    deps = [
        "//examples/go:go_api",
        "//examples/go:go_grpc",
        "//examples/go/pkg/service",
        "@com_google_cloud_go//:go_default_library",
        "@com_google_cloud_go_bigquery//:bigquery",
        "@org_golang_google_api//iterator:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials:go_default_library",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
