load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "audit_service.go",
    ],
    importpath = "examples/go/pkg/service",
    visibility = [
        "//examples/go:__subpackages__",
    ],
    deps = [
        "//examples/go:go_api",
        "//examples/go:go_grpc",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
