load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = [
    "//src/go:__subpackages__",
])

go_library(
    name = "service",
    srcs = [
        "audit_service.go",
    ],
    importpath = "example/pkg/service",
    deps = [
        "//src/go:go_api",
        "//src/go:go_grpc",
        "@com_github_google_uuid//:uuid",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
