java_binary(
    name = "service",
    srcs = glob([
        "example/client/*.java",
        "example/service/*.java",
    ]),
    deps = [
        "//examples/java:java_grpc",
        "//examples/java:java_proto",
        "@maven//:commons_logging_commons_logging",
        "@maven//:org_apache_logging_log4j_log4j_api",
        "@maven//:org_apache_logging_log4j_log4j_core",
    ],
    visibility = ["//examples/java:__subpackages__"],
)
