java_binary(
    name = "service",
    srcs = glob([
        "example/client/*.java",
    ]),
    visibility = ["//examples/java:__subpackages__"],
    deps = [
        "//examples/java:java_grpc",
        "//examples/java:java_proto",
        "@maven//:commons_logging_commons_logging",
        "@maven//:org_apache_logging_log4j_log4j_api",
        "@maven//:org_apache_logging_log4j_log4j_core",
    ],
)
