package(
    default_visibility = ["//src/java:__subpackages__"],
)

java_binary(
    name = "service",
    srcs = glob([
        "example/client/*.java",
        "example/service/*.java",
    ]),
    deps = [
        "//src/java:java_grpc",
        "//src/java:java_proto",
        "@maven//:commons_logging_commons_logging",
        "@maven//:org_apache_logging_log4j_log4j_api",
        "@maven//:org_apache_logging_log4j_log4j_core",
    ],
)
